--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/phani
 spring.datasource.username=root
 spring.datasource.password=Kalhonaho02&
+management.endpoints.web.exposure.include=health,info,metrics
